# Data-transfer-protocol

./: 1.send  CMakeLists.txt  Makefile  copy_file  copy_file.c  playground  playground.c  readme.md  receive_file.c  sure.c  sure.h  test_init_sure  test_init_sure.c  test_init_sure_reveiver  test_init_sure_reveiver.c  tmp.c  token
files/: Makefile  copy_file
sure/: CMakeLists.txt  sure.c  sure.h
udt/: CMakeLists.txt  udt.c  udt.h
